Fixed typo in configuration of daily-alpha-nbms module config

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -161,7 +161,7 @@ config.modules.bloated-plus-extrabins=${config.modules.bloated}, \
 
 # moduleconfig for nbms in Daily Alpha Update Centre
 # consider modules icebrowser,vcscvs,jini,debuggertools
-config.fixedmodules.daily-alpa-nbms=${config.fixedmodules.stable-with-apisupport}
+config.fixedmodules.daily-alpha-nbms=${config.fixedmodules.stable-with-apisupport}
 config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         ant/docs, \
         classclosure, \
