--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
@@ -51,6 +51,12 @@ SEP_output_target=,
 # {1} - file name
 TITLE_output_notarget={0}
 TITLE_output_reused=Ant Execution
+
+# Localization of following key must be identical with
+# localization of key "CTL_CompileTab" from org.openide.compiler.Bundle
+# See also issue: 24474
+TITLE_output_compilation=Compiler
+
 LBL_unparseable_proj_name=???
 EXC_non_local_proj_file=You may only execute Ant scripts residing on disk.
 
