localization comment contained incorrect information

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
@@ -53,7 +53,7 @@ TITLE_output_notarget={0}
 TITLE_output_reused=Ant Execution
 
 # Localization of following key must be identical with
-# localization of key "CTL_CompileTab" from org.openide.compiler.Bundle
+# localization of key "CTL_CompileTab" from org.netbeans.core.compiler.Bundle
 # See also issue: 24474
 TITLE_output_compilation=Compiler
 
