--- a/usersguide/src/org/netbeans/modules/usersguide/Bundle.properties
+++ b/usersguide/src/org/netbeans/modules/usersguide/Bundle.properties
@@ -6,7 +6,7 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
 # UGModule
@@ -19,18 +19,17 @@ FILE_examples=sampledir
 Menu/Help/HelpShortcuts/org-netbeans-modules-usersguide-mainpage.xml=Core IDE Help
 Menu/Help/org-netbeans-modules-usersguide-master.xml=&Contents
 Actions/Help/org-netbeans-modules-usersguide-mainpage.xml=Core IDE Help
-# #14403:
 Mount/org-netbeans-modules-usersguide-sampledir.settings=Sample Directory Mount
 Mount/org-netbeans-modules-usersguide-timerbean.settings=TimerBean JAR
 Palette/Beans/org-netbeans-examples-lib-timerbean-Timer.instance=Timer
 
-# manifest (#15584):
 OpenIDE-Module-Name=General Online Help
 OpenIDE-Module-Short-Description=Online documentation for the IDE.
 OpenIDE-Module-Long-Description=\
     The General Online Help module provides online and context-sensitive \
     documentation for basic IDE features such as browsing and editing files; compiling, running, \
     debugging, and internationalizing applications; and using version control inside of the IDE.
+OpenIDE-Module-Display-Category=Help
 
 # UGModule
 HINT_sampledir=Sample sources to try and a scratch area.
