There is no ExecutionEngine impl in platform, so do not rely on it.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -470,7 +470,8 @@ ACSD_DiscardAll=Discard all.
 EXC_Save=An exception occurred while saving
 CTL_PendingTitle=Waiting for Tasks to Finish
 ACSD_PendingTitle=N/A
-CTL_PendingExternalProcess=Process - 
+# {0} - process name
+CTL_PendingExternalProcess2=Process - {0}
 # NotifyException
 CTL_Title_Exception=Exception
 CTL_NextException=Next >
