Turn debug messages on by default

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -2,6 +2,7 @@ netbeans.dest=netbeans
 test.user.dir=testuserdir
 sanitystart.args.additional= 
 tryme.args.additional=
+build.compiler.debug=on
 
 # Useful for "always successful" build, when you don't care of some
 # particular (and currently broken) modules
