fixed issue #26681 The problem was caused by classloader changes - the core module is not loaded by system classloader anymore, but by a special classloader. ddl.jar which is loaded by system classloader references core module which can't be found because it was loaded by different classloader. ddl.jar has benn moved from lib/ext to modules/ext

--- a/db/build.xml
+++ b/db/build.xml
@@ -68,8 +68,8 @@ Microsystems, Inc. All Rights Reserved.
          compress="false">
       <locale name="ja"/>
     </locjar>
-    <mkdir dir="netbeans/lib/ext"/>
-    <locjar jarfile="netbeans/lib/ext/ddl.jar"
+    <mkdir dir="netbeans/modules/ext"/>
+    <locjar jarfile="netbeans/modules/ext/ddl.jar"
          basedir="libsrc"
          excludesfile="../nbbuild/standard-jar-excludes.txt"
          compress="false">
