--- a/xsl/src/org/netbeans/modules/xsl/cookies/Bundle.properties
+++ b/xsl/src/org/netbeans/modules/xsl/cookies/Bundle.properties
@@ -14,6 +14,8 @@
 MSG_checking=Checking {0}...
 MSG_too_many_errs=Too many errors, stopping further checking.
 
-## ScenarioSupport
+## ScenarioSupport.java
 NAME_customize_scenarios_title=Scenario editor
 MSG_Problems_saving_scenarios_persistently=There are problems saving scenarios persistently.  Cause:
+
+
