New Xerces module introduced.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -74,7 +74,9 @@ config.modules.slim=${config.modules.superslim}, \
         javadoc, \
         properties
 
-local.config.libs=libs/xalan,libs/jaxp
+local.config.libs=libs/xalan, \
+        libs/jaxp, \
+        libs/xerces
 
 local.config.xml=xml/api, \
         xml/tax, \
