Issue 22857. Publish modules API javadoc. Fixed config property names.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -201,7 +201,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
 #     will be stripped for signature API tests
 javadoc.packages=org.netbeans.api.*, \
         org.netbeans.spi.*
-config.javadoc=ant, \
+config.fixedmodules.javadoc=ant, \
         core/javahelp, \
         core/settings, \
         diff, \
@@ -211,6 +211,7 @@ config.javadoc=ant, \
         openide, \
         openidex/looks, \
         xml/api
+config.modules.javadoc=
 
 # configuration for signature test builds
 config.fixedmodules.sigtest=${config.fixedmodules.stable}
