default attribute should be stable

--- a/openide.compat/test/build.xml
+++ b/openide.compat/test/build.xml
@@ -30,7 +30,7 @@ Microsystems, Inc. All Rights Reserved.
    
     <!-- default testtypes, attributes used when no value is supplied from command line -->
     <property name="xtest.testtype" value="unit"/>
-    <property name="xtest.attribs" value="ide"/>
+    <property name="xtest.attribs" value="stable"/>
     
     <!-- Points to antfile with module's harness. 
          Targets from that antfile is called from this build.xml -->
