Removed cpp from daily-alpha-nbms configuration

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -164,13 +164,13 @@ config.modules.bloated-plus-extrabins=${config.modules.bloated}, \
 
 # moduleconfig for nbms in Daily Alpha Update Centre
 # consider modules icebrowser,vcscvs,jini,debuggertools
+# reconsider module cpp
 config.fixedmodules.daily-alpha-nbms=${config.fixedmodules.stable-with-apisupport}
 config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         ant/docs, \
         classclosure, \
         corba, \
         core/naming, \
-        cpp, \
         cpplite, \
         db, \
         externaleditor, \
