Continuation of #26451. Simplifying usage of home & user dir. The three supported use cases: 1. Normal mode, netbeans.home and netbeans.user both set and distinct. 2. Reduced mode, system.dir set. Writes to system.dir. 3. Lightweight mode - no system properties set, writes made to an    in-memory layer of the system filesystem only. You may start the    core using either TopManager.getDefault or Repository.getDefault. Some of this was working before but there were still some problems left, such as obsolete exceptions being thrown.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -24,6 +24,8 @@ OpenIDE-Module-Long-Description=\
 
 # TopManager properties
 CTL_Netbeanshome_property=netbeans.home is not set.\nPlease check your NetBeans startup script.
+ERR_no_user_directory=netbeans.user is not set.\nPlease check your NetBeans startup script.
+ERR_user_directory_is_home=You may not use -userdir with your NetBeans installation directory.
 
 #NetworkOptions
 CTL_Network_opt_name=Network Options
