--- a/testtools/src/org/netbeans/modules/testtools/generator/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/generator/Bundle.properties
@@ -33,7 +33,7 @@ LBL_ActionsPackage=Actions Package:\
 
 LBL_DefaultNoBlock=Default NoBlock
 
-GeneratorTitle=Jelly Node Generator
+GeneratorTitle=Jelly Nodes'n'Actions Generator
 
 ActionName=Jelly Nodes'n'Actions Generator
 
