#26904 continued: deprecate classpath-related methods in Filesystems API, deprecate FileObject.toString in favor of new getPath(), etc.

--- a/openide/build.xml
+++ b/openide/build.xml
@@ -139,6 +139,11 @@ Microsystems, Inc. All Rights Reserved.
 	    <patch class="org/openide/filesystems/AbstractFileSystem" > 
                 <member name="r3fr3shRoot" rename="refreshRoot" />
             </patch>
+
+            <!-- Make toString non-final -->
+	    <patch class="org/openide/filesystems/FileObject"> 
+                <member name="toString"/>
+            </patch>
             
             <!-- superclass implements intefaces AbstractFileSystem.Info, List, Change -->
 	    <patch class="org/openide/filesystems/LocalFileSystem" super="org/openide/filesystems/$$LocalFileSystem$$Patch$$"> 
