--- a/openide.compat/test/build.xml
+++ b/openide.compat/test/build.xml
@@ -60,6 +60,7 @@ Microsystems, Inc. All Rights Reserved.
     <!-- generates classes as they appear to virtual machine during runtime 
     of the ide, so we can compile against them -->
     <target name="generate" depends="init">
+        <echo>Generating compatibility APIs from ${netbeans.home}/lib/openide.jar</echo>
         <patchclass library="${netbeans.home}/lib/ext/boot.jar" source="${netbeans.home}/lib/openide.jar" targetdir="gensrc" />
     </target>
     
