--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -75,9 +75,9 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <tstamp>
+    <!-- tstamp>
         <format property="buildnumber" pattern="yyyyMMddhhmm"/>
-    </tstamp>
+    </tstamp -->
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <locjar jarfile="netbeans/modules/testtools.jar"
@@ -89,7 +89,7 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-    <!-- genlist targetname="nbm" outputfiledir="../nbbuild/netbeans"/ -->
+    <genlist targetname="nbm" outputfiledir="../nbbuild/netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
