--- a/debugger.jpda/test/build.xml
+++ b/debugger.jpda/test/build.xml
@@ -12,7 +12,9 @@ Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
-<project name="Debugger tests" basedir="." default="all">
+<project name="JPDADebugger tests" basedir="." default="all">
+
+    <property name="xtest.ide.winsys" value="mdi"/>
 
     <!-- Ant property. Value 'ignore' means that system classpath is ignored
          and only classpath specified in build file is used. -->
@@ -22,129 +24,22 @@ Microsystems, Inc. All Rights Reserved.
     <property name="netbeans.home" location="../../nbbuild/netbeans"/>
     
     <!-- Name of tested module -->
-    <property name="xtest.module" value="debugger"/>
+    <property name="xtest.module" value="debuggerjpda"/>
     
     <!-- Home of XTest -->
     <property name="xtest.home" location="../../xtest"/>
    
-    <!-- default testtypes, attributes and executors -->
-    <property name="xtest.testtype" value="unit"/>
-    <property name="xtest.attribs" value="all,code,ide"/>
-    <property name="xtest.executors" value="ide,code"/>
-    
-    <!-- These in/excludes will be added to xtest.pattern    -->
-    <!-- if you want to use these properties, you should use -->
-    <!-- config with empty testbag                           -->
-    <property name="xtest.includes" value=""/>
-    <property name="xtest.excludes" value=""/>   
+    <!-- default testtypes, attributes used when no value is supplied from command line -->
+    <property name="xtest.testtype" value="qa-unit"/>
+    <property name="xtest.attribs" value="full"/>
     
     <!-- Points to antfile with module's harness. 
          Targets from that antfile is called from this build.xml -->
     <property name="xtest.module_harness.antfile" location="${xtest.home}/lib/module_harness.xml"/>
 
-    <!-- Says how to create classpath for compilation and for execution code tests.
+    <!-- Says how to create classpath for compilation and for execution code tests by default.
          Can have values src, jar, ide -->
-    <property name="xtest.source.location" value="jar"/>
-
-    <!-- =================== -->
-    <!-- Setting classpathes -->
-    <!-- =================== -->
-    
-    <target name="set_classpath" depends="prepare-compile-classpath,prepare-codetest-classpath">
-    
-        <!-- During filling classpathes remember that only <module>/test 
-             is checked out during automated test execution so <module>/src 
-             or <module>/netbeans isn't available. If you need to add something 
-	     from <module>/src or <module>/netbeans to classpath, 
-	     look below to "setting advanced claspathes" part of this target.
-          -->
-    
-        <!-- List of directories where jars will be searched. -->
-        <property name="xtest.extra.jars.path" location=""/>
-    
-        <!-- This jars is used for compilation, execution codetests and also for
-             execution ide tests (it means this classpath will be mounted in repository).
-             You can also write only name of jar or zip file, not in which directory it is and 
-             this file will be searched in directories specified by property xtest.extra.jars.path 
-                 example: <property name="xtest.extra.jars" value="jemmy.jar;jelly.jar"/>
-          -->
-        <property name="xtest.extra.jars"     value="unit/apps"/>
-   
-        <!-- These jars will be copied to directory ${netebans.home}/lib/ext.
-	     Again you can write only name of jar or zip file, not in which directory it is and 
-             this file will be searched in directories specified by property xtest.extra.jars.path 
-                 example: <property name="xtest.extra.jars.ide" value="jdbc_driver1.zip;jdbcd_river2.jar"/>
-          -->
-        <property name="xtest.extra.jars.ide" value=""/>
-
-
-        <!-- Arguments which will be added into commandline of starting IDE. 
-                 example: <property name="xtest.ide.commandline.suffix" value="-J-Dxtest.useclassloader=org.openidex.util"/>
-          -->
-        <property name="xtest.ide.commandline.suffix" value="-J-Dnetbeans.windows=sdi -J-Dtest.timeout=90 -J-Ddebugger.jdk11.path=c:\jdk1.1.8"/>
-  	
-        <!-- =========================== -->
-        <!-- Setting avanced classpathes -->
-        <!-- =========================== -->
-    
-        <!-- If you need to add something from <module>/src or <module>/netbeans
-             to classpath use target prepare-compile-classpath or prepare-codetest-classpath
-             which fills path according to property xtest.source.location. This property
-             can have values "src" (compilation and execution against sources), "jar" (compil.
-             and execut. against jars) or "ide" (compil. and execut. against installed IDE).
-             "ide" mode is used during automated test execution so it has to be always supported. 
-          -->
-    
-	<!-- This classpath is beside jars in xtest.extra.jars also used for compilation, 
-	     but it depends on property xtest.source.location which classpath will be used.
-	     Fill apropriate classpathes in targets "${xtest.source.location}compile-classath". -->
-	<property name="compiletest.classpath" refid="compiletest.classpath"/>
-            
-	<!-- This classpath is beside jars in xtest.extra.jars also used for execution codetests,
-	     but it depends on property xtest.source.location which classpath will be used.
-	     Fill apropriate classpathes in targets "${xtest.source.location}test-classath". -->
-	<property name="codetest.classpath" refid="codetest.classpath"/>
-        
-    </target>
-    
-    <!-- ========= -->
-    <!-- Compilers -->
-    <!-- ========= -->
-    
-    <target name="unit-compiler" depends="set_classpath">
-       <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="buildtests">
-           <!-- This property contains directories to compile.
-    	        These directories will be compiled separately. 
-                   example: <property name="compile.srcdir" value="unit/src1;unit/src2"/>
-             -->
-           <property name="compile.srcdir" value="unit/src"/>
-       </ant>
-    </target>
-
-    <!-- ========= -->
-    <!-- Executors -->
-    <!-- ========= -->
-    
-    <!-- This target is executed from test-executor in newly created Project -->
-    <!-- Name of this task is defined in cfg-xxx.xml -->
-    <!-- This target executes tests inside IDE -->
-    <target name="runidetest" depends="set_classpath">
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="test">
-           <property name="xtest.exectype" value="ide"/>
-        </ant>
-    </target>
-    
-    <!-- This target is executed from test-executor in newly created Project -->
-    <!-- Name of this task is defined in cfg-xxx.xml -->
-    <!-- This target executes standalone tests -->
-    <target name="runcodetest" depends="set_classpath">
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="test">
-           <property name="xtest.exectype" value="code"/>
-        </ant>
-    </target>
+    <property name="xtest.source.location" value="jar"/>   
  
     <!-- ============ -->
     <!-- Main targets -->
@@ -152,38 +47,30 @@ Microsystems, Inc. All Rights Reserved.
     
     <target name="all" depends="runtests"/>
     
-    <!-- This calls target which will call compilers according to cfg file.
-         You should not change this target unless you realy know what you are doing -->
+    <!-- This calls target which will call compilers according to cfg file -->
     <target name="buildtests">
-       <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="compiler-launcher"/>
+       <ant dir="." antfile="${xtest.module_harness.antfile}" target="compiler-launcher"/>
     </target>
     
-    <!-- This calls common clean process. -->
-    <!-- You can write your own if you need something special -->
+    <!-- This calls common clean process. -->    
     <target name="cleantests">
-       <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="cleantests"/>
+       <ant dir="." antfile="${xtest.module_harness.antfile}" target="cleantests"/>
     </target> 
 
-    <!-- This target runs tests. You should not change this --> 
-    <!-- target unless you realy know what you are doing -->
+    <!-- This target runs tests -->
     <target name="runtests" depends="buildtests">
         <echo message="Module: Running tests for ${xtest.module}, testtype ${xtest.testtype}, attribs=${xtest.attribs}"/>
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="runtests"/>
+        <ant dir="." antfile="${xtest.module_harness.antfile}" target="runtests"/>
     </target>
    
     <!-- This target is executed from test-executor in newly created Project -->
     <!-- Name of this task is defined in cfg-xxx.xml -->
     <target name="test_report">
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="test_report"/>
+        <ant dir="." antfile="${xtest.module_harness.antfile}" target="test_report"/>
     </target>
     
     <target name="cleanresults">
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="cleanresults"/>
+        <ant dir="." antfile="${xtest.module_harness.antfile}" target="cleanresults"/>
     </target>
     
     <target name="realclean" depends="cleantests,cleanresults">
@@ -195,132 +82,4 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Default config is testtype: ${xtest.testtype}, attributes: ${xtest.attribs}."/>
     </target>
     
-   <!-- =============================================================
-        Following targets are for "advanced" users who needs more 
-        compilacated classpathes, which depends on way of execution.
-        ============================================================= -->
-
-    <!-- this "switch" will decide how to create classpath -->
-    <target name="which-classpath">
-        <condition property="jarcode.classpath">
-            <equals arg1="${xtest.source.location}" arg2="jar"/>
-        </condition>
-        <condition property="srccode.classpath">
-            <equals arg1="${xtest.source.location}" arg2="src"/>
-        </condition>
-        <condition property="idecode.classpath">
-            <equals arg1="${xtest.source.location}" arg2="ide"/>
-        </condition>
-    </target>
-
-    <!-- ========================= -->
-    <!-- Classpath for compilation -->
-    <!-- ========================= -->
-    
-    <target name="prepare-compile-classpath"
-         depends="jarcompile-classpath,srccompile-classpath,idecompile-classpath"/>
-    
-    <target name="jarcompile-classpath" depends="which-classpath" if="jarcode.classpath">
-        <echo message="Using jars classpath for compilation."/>
-    	<!-- this classpath will be used for compiling tests against jars -->
-	<path id="compiletest.classpath">        
-	    <!-- If you need e.g. openide.jar, write this:
-	           <pathelement location="../netbeans/lib/openide.jar"/>
- 	      -->
-<!--              
-              <pathelement location="../netbeans/modules/jpdaDebugger.jar"/>
-	      <pathelement location="../../debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
-	      <pathelement location="../../debuggertools/netbeans/modules/toolsDebugger.jar"/>
-	      <pathelement location="../../openide/netbeans/lib/openide.jar"/>
--->
-              <pathelement location="../../nbbuild/netbeans/modules/jpdaDebugger.jar"/>
-	      <pathelement location="../../nbbuild/netbeans/modules/autoload/debuggerCore.jar"/>
-	      <pathelement location="../../nbbuild/netbeans/modules/toolsDebugger.jar"/>
-	      <pathelement location="../../nbbuild/netbeans/lib/openide.jar"/>
-	</path>
-    </target>
-        
-    <target name="srccompile-classpath" depends="which-classpath" if="srccode.classpath">
-        <echo message="Using srcs classpath for compilation."/>
-    	<!-- this classpath will be used for compiling tests against sources -->
-    	<path id="compiletest.classpath">        
-    	    <!-- If you need e.g. openide.jar, write this:
-	           <pathelement location="../netbeans/lib/openide.jar"/>
-	         If you need e.g. sources of your tested module, write this:
-	           <pathelement location="../src"/>
- 	      -->
-	     <pathelement location="../src"/>
-	</path>
-    </target>
-    
-    <!-- we're not using this, because mymodule is not a part of IDE :-) -->    
-    <target name="idecompile-classpath" depends="which-classpath" if="idecode.classpath">
-        <echo message="Using IDE classpath for compilation."/>
-    	<!-- this classpath will be used for compiling tests against installed IDE -->
-    	<path id="compiletest.classpath">   
-    	    <!-- If you need e.g. openide.jar, write this:
-	           <pathelement location="${netbeans.home}/lib/openide.jar"/>
-	         If you need e.g. your tested module, write this:
-	           <pathelement location="${netbeans.home}/modules/somemodule.jar"/>
- 	      -->
-	    <pathelement location="unit/apps"/>     
-   	</path>
-    </target>
-    
-    <!-- ================================== -->
-    <!-- Classpath for execution code tests -->
-    <!-- ================================== -->
-    
-    <target name="prepare-codetest-classpath" 
-            depends="jartest-classpath,srctest-classpath,idetest-classpath"/>
-    
-    <target name="jartest-classpath" depends="which-classpath" if="jarcode.classpath">
-        <echo message="Using jars classpath."/>
-        <!-- this classpath will be used for executing tests against jars -->
-	<path id="codetest.classpath">
-       	    <!-- If you need e.g. openide.jar, write this:
-	           <pathelement location="../netbeans/lib/openide.jar"/>
- 	      -->
-<!--              
-	      <pathelement location="../netbeans/modules/jpdaDebugger.jar"/>
-	      <pathelement location="../../debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
-	      <pathelement location="../../debuggertools/netbeans/modules/toolsDebugger.jar"/>
-	      <pathelement location="../../openide/netbeans/lib/openide.jar"/>
--->              
-              <pathelement location="../../nbbuild/netbeans/modules/jpdaDebugger.jar"/>
-	      <pathelement location="../../nbbuild/netbeans/modules/autoload/debuggerCore.jar"/>
-	      <pathelement location="../../nbbuild/netbeans/modules/toolsDebugger.jar"/>
-	      <pathelement location="../../nbbuild/netbeans/lib/openide.jar"/>
-              
-    	</path>
-    </target>
-        
-    <target name="srctest-classpath" depends="which-classpath" if="srccode.classpath">
-        <echo message="Using srcs classpath."/>
-        <!-- this classpath will be used for executing tests against sources -->
-    	<path id="codetest.classpath">
-	    <!-- If you need e.g. openide.jar, write this:
-	           <pathelement location="../netbeans/lib/openide.jar"/>
-	         If you need e.g. sources of your tested module, write this:
-	           <pathelement location="../src"/>
- 	      -->
-              <pathelement location="../src"/>
-    	</path>
-    </target>
-
-
-    <target name="idetest-classpath" depends="which-classpath" if="idecode.classpath">
-        <echo message="Using IDE classpath."/>
-        <!-- this classpath will be used for executing tests against installed IDE -->
-    	<path id="codetest.classpath">
-	    <!-- If you need e.g. openide.jar, write this:
-	           <pathelement location="${netbeans.home}/lib/openide.jar"/>
-	         If you need e.g. your tested module, write this:
-	           <pathelement location="${netbeans.home}/modules/somemodule.jar"/>
- 	      --> 
-	     <pathelement location="unit/apps"/>
-    	</path>
-    </target>
-    
 </project>
-
