Readded xml/api to the list of modules for javadoc build

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -209,8 +209,8 @@ config.fixedmodules.javadoc=ant, \
         lexer, \
         mdr, \
         openide, \
-        openidex/looks
-#        xml/api
+        openidex/looks, \
+        xml/api
 config.modules.javadoc=
 
 # configuration for signature test builds
