Templates/Services/Browsers=Web Browsers

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -636,7 +636,7 @@ Services/IndentEngine=Indentation Engines
 Services/CompilerType=Compiler Types
 Services/DebuggerType=Debugger Types
 Services/Executor=Execution Types
-Templates/Services/Browsers=Browsers
+Templates/Services/Browsers=Web Browsers
 Templates/Services/ScriptType=Script Types
 Templates/Services/IndentEngine=Indentation Engines
 Templates/Services/CompilerType=Compiler Types
