Integrated #21914 - font antialiasing support

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -172,6 +172,9 @@ HINT_base_keyBindingList=Actions bound to shortcut keys for all editor types.
 PROP_base_toolbarVisible=Show Toolbar
 HINT_base_toolbarVisible=If True, display the editor toolbar.
 
+PROP_base_textAntialiasing=Text Antialiasing
+HINT_base_textAntialiasing=If true, the text anitalising will be used for font rendering.
+
 
 # Component colorings related stuff
 NAME_coloring_base-default=Default
