#22466: display module's "classpath" in the property sheet.

--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -198,6 +198,8 @@ PROP_modules_implversion=Version (Implementation)
 HINT_modules_implversion=Version of module implementation.
 PROP_modules_jar=Module JAR
 HINT_modules_jar=Location of module JAR archive.
+PROP_modules_classpath=Effective Classpath
+HINT_modules_classpath=An approximation of the "classpath" this module can access based on its declared dependencies, when it is enabled.
 PROP_modules_reloadable=Reloadable
 HINT_modules_reloadable=If True, you can reload this module without restarting the IDE.
 PROP_modules_autoload=Autoloaded
