--- a/xml.core/src/org/netbeans/modules/xml/core/lib/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/lib/Bundle.properties
@@ -10,5 +10,9 @@
 # Microsystems, Inc. All Rights Reserved.
 
 
+## FileUtilities
+# {0} - file name including extension
+PROP_replaceMsg=File {0} already exists.\nDo you want to replace it?
+
 ## StreamFileSystem.java
 PROP_StreamFileSystem=StreamFileSystem
